Update and rename hanser.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,192 +1,192 @@
-<body>
-  <!-- 导航栏 -->
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Hanser - 配音演员 &amp; 歌手
-  </title>
-  <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-  <header id="navbar" class="fixed w-full z-50 transition-all duration-300 bg-white-90 backdrop-blur-sm shadow-sm">
-    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-      <a href="#" class="text-2xl font-bold text-primary flex items-center">Hanser
-      </a>
-      <nav class="hidden md:flex space-x-8">
-        <a href="#about" class="hover:text-primary transition-colors">关于</a>
-        <a href="#voice-works" class="hover:text-primary transition-colors">配音作品</a>
-        <a href="#music" class="hover:text-primary transition-colors">音乐作品</a>
-        <a href="#photos" class="hover:text-primary transition-colors">典藏照片</a>
-        <a href="#news" class="hover:text-primary transition-colors">最新动态</a>
-      </nav>
-      <button id="mobile-menu-button" class="md:hidden text-dark text-xl"><i class="fa fa-bars">
-        </i></button>
+  
+=
+=<"w-full h-56对象-覆盖"字符集="UTF-8"/>
+  <元 姓名="视口" 内容="宽度=设备宽度，初始比例=1.0"/>
+  <标题>汉瑟-配音演员&amp；歌手
+  </标题>
+  <链接 href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="样式表"/>
+  <页眉 身份标识="导航栏" 班级="固定w-全Z-50过渡-所有持续时间300bg-白色90背景-模糊-sm阴影-sm">
+    <div 班级="容器mx-auto px-4PY-3弹性对齐-项目间-中心">
+      <一个 href="#" 班级="text-2xl字体-粗体文本-主要弹性项-居中">汉瑟
+      </一个>
+      <NAV 班级="隐藏Md:flex space-x-8">
+        <一个 href="#关于" 班级="悬停：文本-主要过渡色-颜色">关于</一个>
+        <一个 href="#Voice-works" 班级="悬停：文本-主要过渡色-颜色">配音作品</一个>
+        <一个 href="#音乐" 班级="悬停：文本-主要过渡色-颜色">音乐作品</一个>
+        <一个 href="#张照片" 班级="悬停：文本-主要过渡色-颜色">典藏照片</一个>
+        <一个 href="#新闻" 班级="悬停：文本-主要过渡色-颜色">最新动态</一个>
+      </NAV>
+      <按钮 身份标识="移动菜单按钮" 班级="md：隐藏文本-深色文本-xl"><我 班级="fa fa-bars">
+        </我></按钮>
     </div>
-    <!-- 移动端菜单 -->
-    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-md">
-      <div class="container mx-auto px-4 py-3 flex flex-col space-y-4">
-        <a href="#about" class="hover:text-primary transition-colors py-2">关于她</a>
-        <a href="#voice-works" class="hover:text-primary transition-colors py-2">配音作品</a>
-        <a href="#music" class="hover:text-primary transition-colors py-2">音乐作品</a>
-        <a href="#photos" class="hover:text-primary transition-colors py-2">照片墙</a>
-        <a href="#news" class="hover:text-primary transition-colors py-2">最新动态</a>
+<! -- 移动端菜单 -->
+    <div 身份标识="移动菜单" 班级="隐藏md：隐藏bg-白色阴影-md">
+      <div 班级="容器MX-auto px-4PY-3Flex flex-col space-y-4">
+        <一个 href="#关于" 班级="悬停：文本-主要过渡色py-2">关于她</一个>
+        <一个 href="#Voice-works" 班级="悬停：文本-主要过渡色py-2">配音作品</一个>
+        <一个 href="#音乐" 班级="悬停：文本-主要过渡色py-2">音乐作品</一个>
+        <一个 href="#张照片" 班级="悬停：文本-主要过渡色py-2">照片墙</一个>
+        <一个 href="#新闻" 班级="悬停：文本-主要过渡色py-2">最新动态</一个>
       </div>
     </div>
-  </header>
-  <!-- 英雄区 -->
-  <section class="relative pt-24 md:pt-0 min-h-screen flex items-center justify-center overflow-hidden">
-    <div class="absolute inset-0 z-0">
-      <img src="https://i2.hdslb.com/bfs/archive/05e6ba2a1e523e8722294d88bc46de88abb590c2.jpg" alt="背景" class="w-full h-full object-cover opacity-20"/>
+  </页眉>
+<! -- 英雄区 -->
+  <部分 班级="相对pt-24md:pt-0min-h-屏幕弹性项-中心对齐-中心溢出-隐藏">
+    <div 班级="绝对插入-0 Z-0">
+      <IMG src="https://i2.hdslb.com/bfs/archive/05e6ba2a1e523e8722294d88bc46de88abb590c2.jpg" alt="背景" 班级="w-完全h-完全对象-覆盖不透明度-20"/>
     </div>
-    <div class="container mx-auto px-4 py-16 md:py-32 relative z-10 flex flex-col md:flex-row items-center">
-      <div class="md:w-1-2 mb-10 md:mb-0">
+    <div 班级="容器mx-auto px-4py-16md:py-32相对Z-10柔性伸缩柱md：柔性行项目-中心">
+      <div 班级="md:w-1-2mb-10md:mb-0">
       </div>
-      <div class="md:w-1-2 md:pl-10 text-center md:text-left">
-        <img src="https://i2.hdslb.com/bfs/archive/70e451b5e363faaf0cc0223887f7ee01c5c7d5e0.png" class="c19075"/>
-        <h1 class="text-4xl md:text-6xl font-bold mb-6 text-shadow">Hanser
-        </h1>
-        <p class="text-xl md:text-2xl mb-6 text-gray-700">配音演员 · 歌手
+      <div 班级="md:w-1-2md:PL-10文本中心md：文本左">
+        <IMG src="https://i2.hdslb.com/bfs/archive/70e451b5e363faaf0cc0223887f7ee01c5c7d5e0.png" 班级="c19075"/>
+        <H1 班级="text-4xl md:text-6xl font-bold mb-6 text-shadow">汉瑟
+        </H1>
+        <p 班级="text-xl md:text-2xl mb-6 text-灰色700">配音演员 · 歌手
         </p>
-        <p class="text-lg mb-8 leading-relaxed">Hanser，女，中国内地配音演员、虚拟主播、抖音音乐人、QQ音乐入驻歌手、网易音乐人、酷狗音乐人、酷我音乐歌手。
+        <p 班级="text-lg mb-8行距-松弛">汉瑟，女，中国内地配音演员、虚拟主播、抖音音乐人、QQ音乐入驻歌手、网易音乐人、酷狗音乐人、酷我音乐歌手。
         </p>
-        <div class="flex flex-wrap justify-center md:justify-start gap-4">
-          <a href="#about" class="bg-primary hover:bg-primary-90 text-white px-6 py-3 rounded-lg transition-all">
-            了解更多 <i class="fa fa-arrow-right ml-2">
-            </i></a>
-          <a href="#music" class="bg-white hover:bg-gray-100 text-primary border border-primary px-6 py-3 rounded-lg transition-all">
-            聆听音乐 <i class="fa fa-music ml-2">
-            </i></a>
-        </div>
-      </div>
-    </div>
-    <div class="absolute bottom-8 left-1-2 transform -translate-x-1-2 animate-bounce">
-      <a href="#about" class="text-primary text-3xl"><i class="fa fa-angle-down">
-        </i></a>
-    </div>
-  </section>
-  <!-- 关于她 -->
-  <section id="about" class="py-20 bg-white">
-    <div class="container mx-auto px-4">
-      <div class="text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-bold mb-4">关于 Hanser
-        </h2>
-      </div>
-      <div class="max-w-4xl mx-auto">
-        <p class="text-lg mb-6 leading-relaxed">于2018年、2020年、2021年，入选bilibili年度百大UP主。
-        </p>
-        <p class="text-lg mb-6 leading-relaxed">2011年3月22日，hanser发布了在B站的第一个视频“这个歌姬叫猫柳”。
-          <br/>2019年12月14日，她有了自己的虚拟形象——短发、圆脸、嗓音甜。
-          <br/>2022年9月20日，发布首张个人音乐专辑《一抹憨色》电子版上线网易云。
-          <br/>2023年7月29日，hanser参与的《崩坏3》「林海绮律」线上音乐会开播。
-        </p>
-        <p class="text-lg mb-6 leading-relaxed">配起音来可御可萌，唱起歌来甜美治愈，满脑子餐饮界商业鬼点子，这样的小天使究竟是谁？没错，就是——百变奶精hanser！2021年，除了持续输出投稿内容，hanser还开办了《海上油菜花》个人演唱会，与“毛怪们”线上线下共同狂欢。（哔哩哔哩评）
-      <br/>hanserLIVE弹幕组成立于二〇一九年二月，成员为直播间的部分房管和活跃毛怪，是一个致力于尬舔事业的神秘组织。组织使命是通过完善并引导直播间的歌曲应援和直播相关信息的整理分析，从而为毛怪们提供更好的观播体验。毛怪俱乐部是由弹幕组开发和管理的hanser非公式化应援网站（https://2550505.com/）。目前主要提供直播信息收录及历史记录查询，直播歌单收录及演唱记录查询，直播歌曲应援弹幕收录及投稿，毛怪积分收录及查询等功能。
-        </p>
-        <p class="text-lg mb-6 leading-relaxed">
-        </p>
-        <span id="id11tg" class="c8735"></span>
-        <div class="bg-light p-6 rounded-lg shadow-md card-hover">
-          <div class="text-primary text-3xl mb-4">
-            <i class="fa fa-microphone">
-            </i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">配音演员
-          </h3>
-        </div>
-        <div class="bg-light p-6 rounded-lg shadow-md card-hover">
-          <div class="text-primary text-3xl mb-4">
-            <i class="fa fa-music">
-            </i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">歌手
-          </h3>
-        </div>
-        <div class="bg-light p-6 rounded-lg shadow-md card-hover">
-          <div class="text-primary text-3xl mb-4">
-            <i class="fa fa-comments">
-            </i>
-          </div>
-          <h3 class="text-xl font-semibold mb-2">网络主播
-          </h3>
-        </div>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-12">
+        <div 班级="弹性柔绕对齐中心md：对齐开始间隙-4">
+          <一个 href="#关于" 班级="bg-主要悬停：bg-主要90文本-白色px-6PY-3圆角-lg过渡-全部">
+了解更多<我 班级="fa fa-箭头-右ML-2">
+            </我></一个>
+          <一个 href="#音乐" 班级="bg-白色悬停：bg-灰色-100文本-主要边框边框-主要px-6PY-3圆角-lg过渡-全部">
+聆听音乐<我 班级="fa-fa音乐ML-2">
+            </我></一个>
         </div>
       </div>
     </div>
-  </section>
-  <!-- 配音作品 -->
-  <section id="voice-works" class="py-20 bg-gray-50">
-    <div class="container mx-auto px-4">
-      <div class="text-center mb-16">
-        <h2 class="text-3xl md:text-4xl font-bold mb-4">配音作品
-        </h2>
+    <div 班级="绝对底部-8左-1-2变换-平移-x-1-2动画-反弹">
+      <一个 href="#关于" 班级="文本-主文本-3 XL"><我 班级="fa fa角度向下">
+        </我></一个>
+    </div>
+  </部分>
+<! -- 关于她 -->
+  <部分 身份标识="关于" 班级="py-20bg-白色">
+    <div 班级="容器MX-auto px-4">
+      <div 班级="文本居中MB-16">
+        <H2 班级="text-3xl md:text-4xl font-bold MB-4">关于汉瑟
+        </H2>
       </div>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-        <!-- 作品卡片1 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/b2de9c82d158ccbf6c817ce58d93ab3eb13532faeb92" alt="崩坏3" class="w-full h-56 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-bold mb-2">《崩坏3》
-            </h3>
-            <p class="text-gray-600 mb-4">配音角色：布洛妮娅·扎伊切克
+      <div 班级="max-w-4xl mx-auto">
+        <p 班级="text-lg mb-6行距-松弛">于2018年、2020年、2021年，入选哔哩哔哩年度百大UP主.
+        </p>
+        <p 班级="text-lg mb-6行距-松弛">2011年3月22日，汉瑟发布了在B站的第一个视频“这个歌姬叫猫柳”。
+          <溴/>2019年12月14日，她有了自己的虚拟形象——短发、圆脸、嗓音甜。
+          <溴/>2022年9月20日，发布首张个人音乐专辑《一抹憨色》电子版上线网易云。
+          <溴/>2023年7月29日，汉瑟参与的《崩坏3》“林海绮律”线上音乐会开播。
+</p>
+        <p 班级="text-lg mb-6行距-松弛">配起音来可御可萌，唱起歌来甜美治愈，满脑子餐饮界商业鬼点子，这样的小天使究竟是谁？ 没错，就是--百变奶精汉瑟！ 2021年，除了持续输出投稿内容，汉瑟还开办了《海上油菜花》个人演唱会，与“毛怪们”线上线下共同狂欢。 （哔哩哔哩评）
+      <溴/>hanserLIVE弹幕组成立于二0一九年二月，成员为直播间的部分房管和活跃毛怪，是一个致力于尬舔事业的神秘组织。组织使命是通过完善并引导直播间的歌曲应援和直播相关信息的整理分析，从而为毛怪们提供更好的观播体验。毛怪俱乐部是由弹幕组开发和管理的汉瑟非正式化应援网站(https://2550505.com/）。目前主要提供直播信息收录及历史记录查询，直播歌单收录及演唱记录查询，直播歌曲应援弹幕收录及投稿，毛怪积分收录及查询等功能。
+        </p>
+        <p 班级="text-lg mb-6行距-松弛">
+        </p>
+        <跨度 身份标识="id11tg" 班级="c8735"></跨度>
+        <div 班级="bg-light p-6圆角-lg阴影-md卡-悬停">
+          <div 班级="文本-主文本-3 XL MB-4">
+            <我 班级="fa fa-麦克风">
+            </我>
+          </div>
+          <H3 班级="text-xl字体-semibold MB-2">配音演员
+          </H3>
+        </div>
+        <div 班级="bg-light p-6圆角-lg阴影-md卡-悬停">
+          <div 班级="文本-主文本-3 XL MB-4">
+            <我 班级="fa-fa音乐">
+            </我>
+          </div>
+          <H3 班级="text-xl字体-semibold MB-2">歌手
+          </H3>
+        </div>
+        <div 班级="bg-light p-6圆角-lg阴影-md卡-悬停">
+          <div 班级="文本-主文本-3 XL MB-4">
+            <我 班级="fa-fa-comments">
+            </我>
+          </div>
+          <H3 班级="text-xl字体-semibold MB-2">网络主播
+          </H3>
+        </div>
+        <div 班级="网格列-1md：网格列-3间隙-6MT-12">
+        </div>
+</div>
+</div>
+</部分>
+<! -- 配音作品 -->
+  <部分 身份标识="语音工作" 班级="py-20bg-灰色-50">
+    <div 班级="容器MX-auto px-4">
+      <div 班级="文本居中MB-16">
+        <H2 班级="text-3xl md:text-4xl font-bold MB-4">配音作品
+        </H2>
+      </div>
+      <div 班级="网格列-1md：网格列-2lg：网格列-3间隙-8">
+<! -- 作品卡片1 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/b2de9c82d158ccbf6c817ce58d93ab3eb13532faeb92" alt="崩坏3" 班级="w-full h-56对象-覆盖"/>
+          <div 班级="p-6">
+            <H3 班级="text-xl font-bold MB-2">《崩坏3》
+            </H3>
+            <p 班级="text-灰色-600MB-4">配音角色：布洛妮娅·扎伊切克
             </p>
-            <p class="text-gray-700">
-              布洛妮娅·扎伊切克，手机游戏《崩坏3》及其衍生作品中的角色，天命对崩坏特攻第二小队代理队长，前天命B级女武神，第一律者·理之律者。
+            <p 班级="文本-灰色-700">
+布洛妮娅·扎伊切克，手机游戏《崩坏3》及其衍生作品中的角色，天命对崩坏特攻第二小队代理队长，前天命B级女武神，第一律者·理之律者。
             </p>
           </div>
         </div>
-        <!-- 作品卡片2 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/574e9258d109b3de9c822fcd43ee7b81800a19d8e64e?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="葬花·暗黑桃花源" class="w-full h-56 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-bold mb-2">《葬花·暗黑桃花源》
-            </h3>
-            <p class="text-gray-600 mb-4">配音角色：双花
+<! -- 作品卡片2 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/574e9258d109b3de9c822fcd43ee7b81800a19d8e64e?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="葬花·暗黑桃花源" 班级="w-full h-56对象-覆盖"/>
+          <div 班级="p-6">
+            <H3 班级="text-xl font-bold MB-2">《葬花·暗黑桃花源》
+            </H3>
+            <p 班级="text-灰色-600MB-4">配音角色：双花
             </p>
-            <p class="text-gray-700">
-              双花是国产文字冒险游戏《葬花》中的女主角，原型源自游戏《桃花源》的女主角小桃花。其身份设定为战国时期呼钺国公主，因服用奇石丹药与九百国民被殉葬于墓中，灵魂永存于奇石幻境存活约2300年。
-            </p>
-          </div>
-        </div>
-        <!-- 作品卡片3 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/9f510fb30f2442a7d933f526431aba4bd11372f0a4a5?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="饿殍：明末千里行" class="w-full h-56 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-bold mb-2">《饿殍：明末千里行》
-            </h3>
-            <p class="text-gray-600 mb-4">配音角色：满穗
-            </p>
-            <p class="text-gray-700">
-             她的姐姐被洛阳的千年豚妖杀死，她为了替姐姐复仇而故意被人牙子拐走，只为刺杀豚妖。上述的一部分或全部为穗的谎话。
+            <p 班级="文本-灰色-700">
+双花是国产文字冒险游戏《葬花》中的女主角，原型源自游戏《桃花源》的女主角小桃花。 其身份设定为战国时期呼钺国公主，因服用奇石丹药与九百国民被殉葬于墓中，灵魂永存于奇石幻境存活约2300年。
             </p>
           </div>
         </div>
-        <!-- 作品卡片4 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/c995d143ad4bd113629e4ccb54afa40f4afb05f3?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="女武神的餐桌" class="w-full h-56 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-bold mb-2">《女武神的餐桌》
-            </h3>
-            <p class="text-gray-600 mb-4">配音角色：布洛妮娅·扎伊切克
+<! -- 作品卡片3 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/9f510fb30f2442a7d933f526431aba4bd11372f0a4a5?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="饿殍：明末千里行" 班级="w-full h-56对象-覆盖"/>
+          <div 班级="p-6">
+            <H3 班级="text-xl font-bold MB-2">《饿殍：明末千里行》
+            </H3>
+            <p 班级="text-灰色-600MB-4">配音角色：满穗
             </p>
-            <p class="text-gray-700">
-              圣芙蕾雅学园的女武神训练生。面无表情的三无少女。做料理时，更注重注重营养均衡。
-            </p>
-          </div>
-        </div>
-        <!-- 作品卡片5 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/bf096b63f6246b600c3366e7a5af0d4c510fd9f90452?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="崩坏：星穹铁道" class="w-full h-56 object-cover"/>
-          <div class="p-6">
-            <h3 class="text-xl font-bold mb-2">《崩坏：星穹铁道》
-            </h3>
-            <p class="text-gray-600 mb-4">配音角色：银狼
-            </p>
-            <p class="text-gray-700">
-            银狼，米哈游出品的游戏《崩坏：星穹铁道》及其衍生作品中的角色，“星核猎手”的成员，骇客高手。
+            <p 班级="文本-灰色-700">
+她的姐姐被洛阳的千年豚妖杀死，她为了替姐姐复仇而故意被人牙子拐走，只为刺杀豚妖。 上述的一部分或全部为穗的谎话。
             </p>
           </div>
         </div>
-        <!-- 作品卡片6 -->
-        <div class="bg-white rounded-xl overflow-hidden shadow-md card-hover">
-          <img src="https://bkimg.cdn.bcebos.com/pic/08f790529822720e187acbfb74cb0a46f21fab7e?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="碧蓝航线" class="w-full h-56 object-cover"/>
+<! -- 作品卡片4 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/c995d143ad4bd113629e4ccb54afa40f4afb05f3?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="女武神的餐桌" 班级="w-full h-56对象-覆盖"/>
+          <div 班级="p-6">
+            <H3 班级="text-xl font-bold MB-2">《女武神的餐桌》
+            </H3>
+            <p 班级="text-灰色-600MB-4">配音角色：布洛妮娅·扎伊切克
+            </p>
+            <p 班级="文本-灰色-700">
+圣芙蕾雅学园的女武神训练生。 面无表情的三无少女。 做料理时，更注重注重营养均衡。
+            </p>
+          </div>
+        </div>
+<! -- 作品卡片5 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/bf096b63f6246b600c3366e7a5af0d4c510fd9f90452?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="崩坏：星穹铁道" 班级="w-full h-56对象-覆盖"/>
+          <div 班级="p-6">
+            <H3 班级="text-xl font-bold MB-2">《崩坏：星穹铁道》
+            </H3>
+            <p 班级="text-灰色-600MB-4">配音角色：银狼
+            </p>
+            <p 班级="文本-灰色-700">
+银狼，米哈游出品的游戏《崩坏：星穹铁道》及其衍生作品中的角色，“星核猎手”的成员，骇客高手。
+            </p>
+          </div>
+        </div>
+<! -- 作品卡片6 -->
+        <div 班级="bg-白色圆角-xl溢出-隐藏阴影-md卡-悬停">
+          <IMG src="https://bkimg.cdn.bcebos.com/pic/08f790529822720e187acbfb74cb0a46f21fab7e?x-bce-process=image/format,f_auto/watermark,image_d2F0ZXIvYmFpa2UyNzI,g_7,xp_5,yp_5,P_20/resize,m_lfit,limit_1,h_1080" alt="碧蓝航线" 班级="w-full h-56对象-覆盖"/>
           <div class="p-6">
             <h3 class="text-xl font-bold mb-2">《碧蓝航线》
             </h3>
@@ -452,4 +452,5 @@
       }
     }
   </script>
+
 </body>
